Registration changes - 1